templating + framework home route + partials created

--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -1,2 +1,27 @@
-<h1>Oops! you've got a 404</h1>
-<h2>you are lost....</h2>
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <%- include('../partials/head.ejs') %>
+</head>
+
+<body>
+    <header>
+        <%- include('../partials/header.ejs') %>
+
+    </header>
+
+    <h1>Oops! you've got a 404</h1>
+    <h2>you are lost....</h2>
+
+   
+
+    <footer>
+    
+    <!--working with include: including a footer from the partial directory-->
+        <%- include('../partials/footer.ejs') %>
+    </footer>
+</body>
+
+</html>
