--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,199 @@
+
+/* general styling */ 
+
+:root {
+    /*   color variables */
+    --clr-primary: #F8AFDA;
+    --clr-primary-hover: #FBD5C2;
+    --clr-primary-dark: #000000;
+    --clr-background : #ffffff;
+
+  }
+  
+
 html *{
     box-sizing: border-box;
+    
 }
 body {
-    font-family: sans-serif;
-    padding:2em; 
+    font-family: 'Lato', sans-serif;
+    padding:1rem 4rem 0rem 4rem;
+    background-color: var(--clr-background);
 }
 
+a, a:visited, a:hover{
+    text-decoration: none;
+    color:black;
+}
+
+
+li {
+    text-decoration: none;
+    list-style: none;
+}
+
+
+/* nav styling */ 
+
+
+ul.nav-list {
+    margin-bottom: 5rem;
+}
+  
+  .nav-list {
+    padding:1rem 0rem 1.5rem 0rem;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    border-bottom: 1px solid black;
+    margin-bottom:2rem; }
+  
+  .nav-item {
+    list-style: none;
+    margin-left: 2rem;
+    
+  }
+  
+  .nav-item a {
+    text-decoration: none;
+    color: black;
+    transition: all 200ms ease-in;
+    font-size:18px;
+  }
+
+  a.logoPlace {
+    font-size:25px;
+    font-weight: bold;
+}
+
+  .nav-item a:hover {
+    color: var(--clr-primary-hover);
+  }
+
+  .nav-item a:active {
+    color: var(--clr-primary-hover);
+  }
+  
+  .nav-item:first-child {
+    margin-left: 0;
+    border-right:1.5px solid black;
+    padding-right:1rem;
+  }
+
+  /* logo and button styling */ 
+
+  section.logoClass {
+      margin-right: auto;
+      display: flex;
+      flex-direction: row;
+  }
+
+  
+  .btn-primary {
+    font-family: Montserrat, sans-serif;
+    font-size:18px;
+    background: var(--clr-primary);
+    border: none;
+    outline: none;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    transition: all 200ms ease-in;
+   
+  }
+  
+  .btn-primary:hover {
+    background: var(--clr-primary-hover);
+  }
+  
+/* styling footer */ 
+
+.footer-list {
+    padding:1rem 0rem 1.5rem 0rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid black;
+    margin-bottom:1rem; 
+    margin-top:10rem;
+}
+
+/* styling form */ 
+
+.formIntro {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 4rem 0 0 0;
+}
+
+.form {
+    background-color: #FFF6E5;
+    padding:3rem 4rem 3rem 3rem;
+    margin-left: 2rem;
+    
+   
+}
+
+.form input[type="text"] {
+    border:none;
+    padding:0.7rem;
+    border-radius: 15px;
+    min-width: 30vw;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.form label {
+    margin-right:10rem;
+    margin-top: 1rem;
+    font-size:17px;
+}
+
+.form label#twintig {
+    margin-right:2rem;
+   
+}
+
+/* styling form buttons */ 
+
+.radiobuttons {
+    display:flex;
+    flex-direction: row;
+    margin-top: 1.5rem;
+}
+
+input.input-button {
+    font-family: Montserrat, sans-serif;
+    font-size:18px;
+    background-color: transparent;
+    border: 1px solid black;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    margin-top: 2.5rem;
+ 
+   
+}
+
+input.input-button:hover {
+    background-color:white;
+}
+
+/* styling title and text */ 
+
+.titleDescription {
+    padding: 0 4rem 2rem 0; 
+    max-width: 40vw;
+}
+
+.titleDescription h1 {
+    font-size:50px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    margin: 0 0 2rem 0;
+}
+
+.titleDescription h2 {
+    font-size:16px;
+    font-weight:100;
+    font-family: 'Roboto', sans-serif;
+}
