--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -1,1 +1,29 @@
-<h2>Profile</h2>
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <%- include('../partials/head.ejs') %>
+</head>
+
+<body>
+    <header>
+        <%- include('../partials/header.ejs') %>
+
+    </header>
+
+    <h1>Welkom, <%= user.firstName %></h1>
+
+
+     
+
+    <footer>
+    
+    <!--working with include: including a footer from the partial directory-->
+        <%- include('../partials/footer.ejs') %>
+    </footer>
+</body>
+
+</html>
