--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -34,7 +34,7 @@
 <section class="form">
     <ul>
         <form id="contact-form" method="POST" action="/results">
-            <li> <label for="name"> Wat is je naam?</label>
+            <li> <label for="name"> Wat is je naam?<br></label>
                 <input type="text" name="name" ></li>
 
             
