--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,10 +20,25 @@
     <section class="titleDescription">
      
      <h1>Samen wandelen <br> <span style="color:#FBD5C2">is veel leuker</span></h1>
+     
+     
         <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
+
+               <h2>Variable</h2>
+               <p><%= tagline %></p>
+
+    <ul>
+        <% mascots.forEach(function(mascot) { %>
+          <li>
+            <strong><%= mascot.name %></strong>
+            representing <%= mascot.organization %>,
+            born <%= mascot.birth_year %>
+          </li>
+        <% }); %>
+      </ul>
     </section>
 
 
@@ -33,7 +48,7 @@
 
 <section class="form">
     <ul>
-        <form id="contact-form" method="POST" action="/results">
+        <form action="/" id="contact-form" method="post" >
             <li> <label for="name"> Wat is je naam?<br></label>
                 <input type="text" name="name" ></li>
 
@@ -59,19 +74,12 @@
             
             <input class="input-button" type="submit" value="Matches genereren" />
 
-
-
-
         </form>
     </ul>
 </section>
 
 
 </section>
-
-
-
-
 
 
 
