--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -23,12 +23,6 @@
 
     
 
-     <ul>
-        <% for(var i=0; i<test.length; i++) {%>
-           <li><%= test[i] %></li>
-        <% } %>
-        </ul>
-    
      
         <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -45,18 +39,18 @@
 
 <section class="form">
     <ul>
-        <form action="/" id="contact-form" method="post" >
+        <form name="userForm" action="/" id="contact-form" method="post" >
             <li> <label for="name"> Wat is je naam?<br></label>
                 <input type="text" name="name" ></li>
 
             
             <li> <label for="location" id="locatie"> Op welke locatie wil je wandelen?</label>
                 <input type="text" name="location"> </li>
-            <li><label for="interests"> Jouw favoriete interesses:</label>
-                <input type="text" name="interests"></li>
+            <li><label for="interest"> Jouw favoriete interesses:</label>
+                <input type="text" name="interest"></li>
 
 
-            <li><label for="age" id="age"> Hoe lang wil je wandelen?</label>
+            <li><label for="duration" id="duration"> Hoe lang wil je wandelen?</label>
 
             <section class="radiobuttons">
 
