added data to /result page to ejs loop + duration

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -22,8 +22,6 @@
      <h1>Samen wandelen <br> <span style="color:#FBD5C2">is veel leuker</span></h1>
 
     
-
-     
         <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
@@ -54,10 +52,10 @@
 
             <section class="radiobuttons">
 
-                <input type="radio" id="twintig" name="duur" value="20">
+                <input type="radio" id="twintig" name="time" value="20 minuten">
             <li> <label id="twintig" for="twintig">20-30 minuten</label></li>
 
-            <input type="radio" id="dertig" name="duur" value="30">
+            <input type="radio" id="dertig" name="time" value="30 minuten">
             <li> <label id="dertig" for="30-60">30-60 minuten</label></li>
 
 
