Added code to update users location, get new match

--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,14 +11,41 @@
 
     </header>
 
-    <h1>Welkom, <%= user.firstName %></h1>
+    <h2>Welkom, <strong><%= user.name %></strong></h2>
+
+    <section class="userInfo">
+
+        <p>Naam:<%= user.name %></p>
+        <p>Locatie:<%= user.location %></p>
+        <p>Interesse:<%= user.interest %></p>
+        <p>Tijdsduur:<%= user.time %></p>
+
+    </section>
 
 
-     
+    <section class="form">
+        <ul>
+        
+                <form name="updateForm" action="/profile" id="contact-form" method="post" >
+          
+
+                <li> <label for="newLocation" id="newLocation"> Op welke locatie wil je wandelen?</label>
+                    <input type="text" name="newLocation"> </li>
+               
+    
+    </section>
+                
+                <input class="input-button" type="submit" value="Wijzig je locatie" />
+    
+            </form>
+        </ul>
+    </section>
+
+
 
     <footer>
-    
-    <!--working with include: including a footer from the partial directory-->
+
+        <!--working with include: including a footer from the partial directory-->
         <%- include('../partials/footer.ejs') %>
     </footer>
 </body>
