Added new frontend + favicon

--- a/views/pages/delete.ejs
+++ b/views/pages/delete.ejs
@@ -11,15 +11,16 @@
 
     </header>
 
-   <h2>Profiel verwijderen!!!!</h2>
+   <h2>Profiel verwijderen</h2>
   
 
-   <section class="userInfo">
-       <h3>Weet je het zekers?</h3>
+   <section class="deleteTest">
+       <h3>Weet je het zeker?</h3>
+       <p>Door op de knop te klikken verwijderen je definitief je account, en de bijbehorende opgeslagen data.</p>
 
 </section>
 
-<section class="form">
+<section class="deleteProfile">
     <ul>
     
             <form name="deleteProfile" action="/delete" id="contact-form" method="post" >
