--- a/views/pages/profile-changed.ejs
+++ b/views/pages/profile-changed.ejs
@@ -11,21 +11,23 @@
 
     </header>
 
-   <h2>Je profiel is gewijzigd!</h2>
+   <h2>Je profiel is succesvol gewijzigd!</h2>
   
 
-   <section class="userInfo">
+   <section class="changedMetaData">
        <h3>Jouw nieuwe informatie:</h3>
 
-    <p>Naam:<%= user.name %></p>
-    <p>Locatie:<%= user.location %></p>
-    <p>Interesse:<%= user.interest %></p>
-    <p>Tijdsduur:<%= user.time %></p>
+    <p>Naam: <%= user.name %></p>
+    <p>Locatie: <%= user.location %></p>
+    <p>Interesse: <%= user.interest %></p>
+    <p>Tijdsduur: <%= user.time %></p>
+
+    
 
 </section>
 
 
-<a href="results"><button>Check je nieuwe matches</button></a>
+<a href="results"><button class="input-button">Check je nieuwe matches</button></a>
 
 
 
