--- a/public/css/style.css
+++ b/public/css/style.css
@@ -154,6 +154,38 @@ ul.nav-list {
    
 }
 
+/* styling form profile page */ 
+
+.updateForm {
+  background-color: #FFF6E5;
+  max-width:50vw;
+  padding-top:2%;
+  padding-bottom:2%;
+  
+ 
+}
+
+.updateForm input[type="text"] {
+  border:none;
+  padding:0.7rem;
+  border-radius: 15px;
+  min-width: 30vw;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.updateForm label {
+  margin-right:10rem;
+  margin-top: 1rem;
+  font-size:17px;
+}
+
+
+
+
+
+
+
 /* styling form buttons */ 
 
 .radiobuttons {
@@ -196,4 +228,63 @@ input.input-button:hover {
     font-size:16px;
     font-weight:100;
     font-family: 'Roboto', sans-serif;
+}
+
+ul.matches li {
+  background-color:#FEF6E5;
+  margin-top:2%;
+  padding:2%;
+  width:19vw;
+  min-height:20vh;
+  margin-right:3%;
+  
+}
+
+ul.matches {
+  padding:0;
+  display:flex;
+  flex-direction:row;
+  flex-wrap:wrap;
+ 
+}
+
+.userInfo {
+  background-color:#FEF6E5;
+  padding:2%;
+  display:flex;
+  max-width:50vw;
+  margin-top:3%;
+}
+
+img.avatar {
+  margin-right:8%;
+}
+
+.metadata {
+  margin-top:-3%;
+}
+
+
+button.input-button {
+  font-family: Montserrat, sans-serif;
+font-size: 18px;
+background-color: transparent;
+border: 1px solid black;
+padding: 0.5rem 1rem;
+cursor: pointer;
+margin-top: 2.5rem;
+
+}
+
+.locatieWijzigen {
+  margin-top:3%;
+}
+
+/* changed user data */ 
+
+.changedMetaData {
+  background-color:#FEF6E5;
+  padding:2%;
+  max-width:50vw;
+  margin-top:3%;
 }
