--- a/views/pages/results.ejs
+++ b/views/pages/results.ejs
@@ -15,13 +15,14 @@
     <h1>Jouw matches:</h1>
 
  
-    <ul>
+    <ul class="matches">
         <% match.forEach(function(match) { %>
           <li>
-            <strong>naam:<%= match.name %></strong>
-            locatie: <%= match.location %>,
-            interesse: <%= match.interest %>,
-            lengte wandeling:  <%= match.time %>
+            <img src="../../public/images/heart.png" height="20px" width="20px">
+            <p>naam: <%= match.name %></p>
+            <p>locatie: <%= match.location %></p>
+            <p>interesse: <%= match.interest %></p>
+            <p>lengte wandeling: <%= match.time %></p>
           </li>
         <% }); %>
       </ul>
