--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -11,4 +11,5 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-<title>Document</title>
+<title>WandelMatch</title>
+<link rel="icon" type="image/x-icon" href="../../public/images/favicon.png">
