--- a/views/pages/404.ejs
+++ b/views/pages/404.ejs
@@ -15,6 +15,8 @@
     <h1>Oops! you've got a 404</h1>
     <h2>you are lost....</h2>
 
+    <img class="404" src="../../public/images/404.png" height="600px" width="600px">
+
    
 
     <footer>
