--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -27,9 +27,6 @@
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
 
-              
-         
-
     </section>
 
 
@@ -39,13 +36,13 @@
     <ul>
         <form name="userForm" action="/" id="contact-form" method="post" >
             <li> <label for="name"> Wat is je naam?<br></label>
-                <input type="text" name="name" required></li>
+                <input type="text" name="name" required placeholder="voornaam"></li>
 
             
             <li> <label for="location" id="locatie"> Op welke locatie wil je wandelen?</label>
-                <input type="text" name="location" required> </li>
-            <li><label for="interest"> Jouw favoriete interesses:</label>
-                <input type="text" name="interest" required></li>
+                <input type="text" name="location" required placeholder="stad/dorp"> </li>
+            <li><label for="interest"> Jouw favoriete interesse:</label>
+                <input type="text" name="interest" required placeholder="hobby of interesse"></li>
 
 
             <li><label for="duration" id="duration"> Hoe lang wil je wandelen?</label>
