--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
       </li>
       
       <li class="nav-item">
-        <button class="btn-primary">Button</button>
+        <button class="btn-primary">WandelMatch</button>
       </li>
     </ul>
   </nav>
